--- a/AntiSpamSmile/pom.xml
+++ b/AntiSpamSmile/pom.xml
@@ -67,6 +67,11 @@
             <version>1.7.0RC2</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.9.1</version>
